--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -494,7 +494,7 @@ p, a, span, label, ul, button, td, th {
   flex-wrap: wrap;
   position: sticky;
   top: 3.75rem;
-  z-index: 100;
+  z-index: 99;
   background-color: #fff;
   padding-bottom: .3rem;
   vertical-align: middle;
